[package]
name = "chromedriver-autoinstaller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
is_executable = "1"
quick-xml = "0"
regex = "1"
reqwest = { version = "0.11", features = ["blocking"]}
which = "4"
zip = "0"