[package]
name = "chromedriver-autoinstaller"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Verifies that the correct Chromedriver is installed and in Path. A rewriting of Yeongbin Jo's [python-chromedriver-autoinstaller](https://github.com/yeongbin-jo/python-chromedriver-autoinstaller)"
repository = "https://github.com/Brenbrit/rust-chromedriver-autoinstaller"
readme = "README.md"
keywords = ["chrome", "chromedriver"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
is_executable = "1"
quick-xml = "0"
regex = "1"
ureq = "2"
which = "4"
zip = "0"